[fix] transaction implementation
